[metadata]
name = ha_vicare
author = Oischinger, Hans
author_email = hans.oischinger@gmail.com
description = Custom integration for Home Assistant to access Viessmann devices via the cloud

[options]
package_dir =
    = src
packages = find:
test_suite = tests
setup_requires =
    setuptools >=46.4
install_requires =
    aiohttp>=3.5.2
tests_require =
    pytest-aiohttp
    pytest >= 6.2.2
    pytest-asyncio
    pytest-cov

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-asyncio
    pytest-aiohttp
    pytest-cov
all =
    %(test)s

[aliases]
test=pytest

[coverage:run]
branch = true
parallel = true
source =
  custom_components

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplemented()
    if __name__ == '__main__':
    main()
precision = 2
show_missing = true

[coverage:html]
directory = build/report

[tool:pytest]
testpaths = tests
norecursedirs = .git
addopts =
    --strict-markers
    --cov=custom_components
    --cov-report html
    --cov-report xml
asyncio_mode = auto

[flake8]
exclude = .venv,.git,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True

[mypy]
python_version = 3.9
show_error_codes = true
ignore_errors = true
follow_imports = silent
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
